src/test/ui/async-await/async-fn-nonsend.stderr
error: future cannot be sent between threads safely
  --> $DIR/async-fn-nonsend.rs:26:5
   |
LL |     assert_send(non_send_temporary_in_match());
   |     ^^^^^^^^^^^ future returned by `non_send_temporary_in_match` is not `Send`
   |
   = help: within `impl Future`, the trait `Send` is not implemented for `Rc<()>`
note: future is not `Send` as this value is used across an await
  --> $DIR/async-fn-nonsend.rs:18:20
   |
LL |     match Some(non_send()) {
   |                ---------- has type `impl Debug` which is not `Send`
LL |         Some(_) => fut().await,
   |                    ^^^^^^^^^^^ await occurs here, with `non_send()` maybe used later
...
LL | }
   | - `non_send()` is later dropped here
note: required by a bound in `assert_send`
  --> $DIR/async-fn-nonsend.rs:23:24
   |
LL | fn assert_send(_: impl Send) {}
   |                        ^^^^ required by this bound in `assert_send`

error: future cannot be sent between threads safely
  --> $DIR/async-fn-nonsend.rs:26:5
   |
LL |     assert_send(non_send_temporary_in_match());
   |     ^^^^^^^^^^^ future returned by `non_send_temporary_in_match` is not `Send`
   |
   = help: within `Option<impl Debug>`, the trait `Sync` is not implemented for `Rc<()>`
note: future is not `Send` as this value is used across an await
  --> $DIR/async-fn-nonsend.rs:17:11
   |
LL |     match Some(non_send()) {
   |           ^^^^^^^^^^^^^^^^
   |           |
   |           await occurs here, with `Some(non_send())` maybe used later
   |           has type `&Option<impl Debug>` which is not `Send`
note: required by a bound in `assert_send`
  --> $DIR/async-fn-nonsend.rs:23:24
   |
LL | fn assert_send(_: impl Send) {}
   |                        ^^^^ required by this bound in `assert_send`

error: aborting due to 2 previous errors

